<?xml version="1.0" encoding="utf-8"?>
<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Music Player</string>
    <string name="artist">Artist:</string>
    <string name="album">Album:</string>
    <string name="library_music">Music Library</string>
    <string name="empty_music_library_message">No audio files in your Music Library</string>
    <string name="duration">Duration:</string>
    <string name="instructions">Tap on the entries to play audio.</string>
    <string name="now_playing">Now Playing</string>
    <string name="previous_song_button_label"><![CDATA[|<]]></string>
    <string name="next_song_button_label"><![CDATA[>|]]></string>
    <string name="play_button_label_play"><![CDATA[>]]></string>
    <string name="play_button_label_pause">||</string>
    <string name="back_button_label"><![CDATA[< Back]]></string>
    <string name="start_time">0:00</string>
    <string name="now_playing_song">Currently playing <xliff:g id="song" example="Believer">%s</xliff:g></string>
</resources>
